Add keyUsage/extendedKeyUsage extensions

--- a/ca.conf
+++ b/ca.conf
@@ -11,6 +11,7 @@ O  = Swift Core Developers
 CN = SAIO Certificate Signer
 
 [ext]
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid:always,issuer:always
-basicConstraints = CA:true
+subjectKeyIdentifier    = hash
+authorityKeyIdentifier  = keyid:always, issuer:always
+basicConstraints        = CA:true
+keyUsage                = keyCertSign
