--- a/saio.conf
+++ b/saio.conf
@@ -13,10 +13,12 @@ O  = Swift Core Developers
 CN = saio
 
 [ext]
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid:always,issuer:always
-basicConstraints = CA:false
-subjectAltName = @alt-names
+subjectKeyIdentifier    = hash
+authorityKeyIdentifier  = keyid:always, issuer:always
+basicConstraints        = CA:false
+subjectAltName          = @alt-names
+keyUsage                = digitalSignature, keyEncipherment
+extendedKeyUsage        = serverAuth
 
 [alt-names]
 DNS.1	= saio
