Add xip.io alt-names

--- a/saio.conf
+++ b/saio.conf
@@ -23,4 +23,6 @@ extendedKeyUsage        = serverAuth
 [alt-names]
 DNS.1	= saio
 DNS.2	= *.saio
+DNS.3	= 192.168.8.80.xip.io
+DNS.4	= *.192.168.8.80.xip.io
 IP.1	= 192.168.8.80
