xip.io is dead; use nip.io and sslip.io

--- a/saio.conf
+++ b/saio.conf
@@ -23,6 +23,8 @@ extendedKeyUsage        = serverAuth
 [alt-names]
 DNS.1	= saio
 DNS.2	= *.saio
-DNS.3	= 192.168.8.80.xip.io
-DNS.4	= *.192.168.8.80.xip.io
+DNS.3	= 192.168.8.80.nip.io
+DNS.4	= *.192.168.8.80.nip.io
+DNS.5	= 192.168.8.80.sslip.io
+DNS.6	= *.192.168.8.80.sslip.io
 IP.1	= 192.168.8.80
